# EagleOS

./: .bochsrc  .gdbinit  .gitignore  Bochs.sh  Build.sh  CMakeLists.txt  Clean.sh  CodeGuide.md  Contributing.md  ISO.sh  Makefile  Qemu.sh  ReBuild.sh  ReadMe.md  Run.md  ValidateMultiboot.sh  bx_enh_dbg.ini
Axe/: BootInfo.h  CMakeLists.txt  linker.ld  make.config
Axe/ATA/: ATA.cpp  ATA.h
Axe/Boot/: BLMain.cpp  Bootloader.asm  Bootsector.asm  MemoryInfo.h
Axe/ELF/: ELF.cpp  ELF.h
Axe/ELF/Headers/: ELFHeader.h  ELFIdent.h  ELFProgramHeader.h  ELFSectionHeader.h
Axe/Graphics/: VGA.cpp  VGA.h
Axe/Lib/: BPanic.cpp  BPrintf.cpp  BPrintf.h
Axe/Memory/: BMalloc.cpp  BMalloc.h  Malloc.cpp  Malloc.h
Axe/NXN/: BPanic.cpp  BPanic.h  BPrintf.cpp  BPrintf.h  Bitset.h  Bitwise.h  CString.cpp  CString.h  TypeConverter.cpp  TypeConverter.h
Axe/System/: SystemMemory.cpp  SystemMemory.h
Axe/x86/: Boot86Top.asm  IO.asm  IO.cpp  IO.h  Memory.asm  Memory.h  Video.asm  Video.h
Axe/x86/Paging/: PageManager.cpp  PageManager.h
Bootloader/: BLMain.cpp  BootInfo.h  Bootloader.asm  Bootsector.asm  linker.ld  make.config
Bootloader/ATA/: ATA.cpp  ATA.h
Bootloader/Drivers/: ATA.asm  ATA.h
Bootloader/ELF/: ELF.cpp  ELF.h
Bootloader/ELF/Headers/: ELFHeader.h  ELFIdent.h  ELFProgramHeader.h  ELFSectionHeader.h
Bootloader/Memory/: Malloc.cpp  Malloc.h  MemoryInfo.h
Bootloader/System/: SystemMemory.cpp  SystemMemory.h
Bootloader/x86/: Boot86.asm  Boot86.h  Boot86Bot.asm  Memory.asm  Memory.h  Video.asm  Video.h
ELIB/: CMakeLists.txt
ELIB/LibATA/: ATA.cpp  ATA.h
ELIB/LibELF/: ELF.cpp  ELF.h
ELIB/LibELF/Headers/: ELFHeader.h  ELFIdent.h  ELFProgramHeader.h  ELFSectionHeader.h
ESTD/: Algorithm.h  Bitmap.h  Bitset.h  Bitwise.h  CMakeLists.txt  CString.cpp  CString.h  EMalloc.h  StdLib.cpp  StdLib.h  TypeConverter.cpp  TypeConverter.h  make.config
Handshake/: BootInfo.h  CMakeLists.txt  linker.ld
Handshake/BIOS/Memory/: E820Memory.asm  E820Memory.h
Handshake/BIOS/Utility/: Boot86Bot.asm  Boot86Top.asm
Handshake/BIOS/Video/: Print.asm  Print.cpp  Print.h
Handshake/CPU/: IO.h  PageManager.asm  PageManager.cpp  PageManager.h
Handshake/HS/: Bootloader.asm  Bootsector.asm  Handshake.cpp  Handshake.h
Handshake/Memory/: Malloc.cpp  Malloc.h
Handshake/Stdio/: Panic.cpp  Panic.h  Print.cpp  Print.h
Handshake/System/: MemoryMap.cpp  MemoryMap.h
Handshake/Video/: VGA.cpp  VGA.h
Kernel/: CMakeLists.txt  Kernel.asm  Kernel.cpp  linker.ld  make.config
Kernel/Arch/: CMakeLists.txt  make.config
Kernel/Arch/x86/: Boot.asm  GDT.cpp  GDT.h  IDT.asm  IDT.cpp  IDT.h  IO.asm  IO.h  ISR.asm  ISR.cpp  ISR.h  PIC8259.cpp  PIC8259.h  Processor.asm  Processor.cpp  Processor.h
Kernel/Arch/x86/Memory/: Paging.cpp  Paging.h
Kernel/Boot/: BootInfo.h  CMakeLists.txt  MemoryMap.h  Multiboot.cpp  Multiboot.h
Kernel/Drivers/: CMakeLists.txt  make.config
Kernel/Drivers/Graphics/: VGA.cpp  VGA.h
Kernel/Drivers/Storage/ATA/: ATA.cpp  ATA.h  ATADevice.h
Kernel/ESTD/: Algorithm.h  Array.h  Bitmap.h  Bitset.h  Bitwise.h  CMakeLists.txt  CString.cpp  CString.h  StdLib.cpp  StdLib.h  String.cpp  String.h  StringUtil.cpp  StringUtil.h  TypeConverter.cpp  TypeConverter.h
Kernel/Kern/: KPanic.cpp  KPrintf.cpp  KPrintf.h
Kernel/Memory/: CMakeLists.txt  Heap.cpp  Heap.h  KMalloc.cpp  KMalloc.h  MemoryRegion.h  MemoryUtil.cpp  MemoryUtil.h  PMM.cpp  PageDirectory.cpp  PageDirectory.h  PageInfo.h  PageManager.asm  PageManager.cpp  PageManager.h  PageTable.cpp  PageTable.h  PhysicalAddress.h  PhysicalMemoryManager.cpp  PhysicalMemoryManager.h  VirtualAddress.h  VirtualMemoryAllocator.cpp  VirtualMemoryAllocator.h  VirtualMemoryManager.cpp  VirtualMemoryManager.h  ZoneMemoryManager.cpp  ZoneMemoryManager.h  make.config
Kernel/NXN/: Bitset.h  Bitwise.h  CString.cpp  CString.h  KPanic.cpp  KPrintf.cpp  KPrintf.h  TypeConverter.cpp  TypeConverter.h  make.config
Scripts/: Setup-Toolchain.sh
iso/boot/: Kernel.elf
iso/boot/grub/: grub.cfg
