file(GLOB_RECURSE BootloaderSources
	"${CMAKE_CURRENT_SOURCE_DIR}/BootInfo.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Boot/Bootloader.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/Boot/BLMain.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Boot/MemoryInfo.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Lib/BPrintf.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Lib/BPrintf.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Lib/BPanic.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Lib/BPanic.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Video.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Video.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Memory.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Memory.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/IO.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/IO.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/IO.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Paging/PageManager.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Paging/PageManager.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Paging/PageManager.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Memory/BMalloc.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Memory/BMalloc.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/System/SystemMemory.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/System/SystemMemory.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Graphics/VGA.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Graphics/VGA.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/ATA/ATA.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/ATA/ATA.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/ATA/ATA.cpp"
)

add_library(${BOOTLOADER_TARGET_NAME} OBJECT ${BootloaderSources})
target_include_directories(${BOOTLOADER_TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../")
target_compile_definitions(${ELIB_TARGET_NAME} PRIVATE ESTD_BOOTLOADER_BUILD)
