file(GLOB_RECURSE ArchSources
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Processor.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Processor.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Processor.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/IO.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/IO.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/GDT.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/GDT.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/GDT.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/IDT.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/IDT.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/IDT.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/PIC8259.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/PIC8259.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/ISR.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/ISR.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/ISR.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Memory/PageInfo.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Memory/Paging.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Memory/Paging.asm"
	"${CMAKE_CURRENT_SOURCE_DIR}/x86/Memory/Paging.cpp"
)

add_library(${ARCH_TARGET_NAME} OBJECT ${ArchSources})
target_include_directories(${ARCH_TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../../")
